bugfix: show image filter on mobile

--- a/src/styles/scss/_image.scss
+++ b/src/styles/scss/_image.scss
@@ -4,6 +4,7 @@
 
   &__filter {
     position: absolute;
+    height: 100%;
     overflow: hidden;
 
     &:hover {
